<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity$PlaceholderFragment">

    <TextView
            android:id="@+id/new_workout_label_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_workout_label_title"
            android:layout_alignParentTop="true"
            style="@style/CMCaption"
    />
    <EditText
            android:id="@+id/new_workout_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/new_workout_label_title"
            android:maxLength="50"
            android:singleLine="true"
            style="@style/CMEditTitle"
            android:contentDescription="@string/new_workout_label_title"
            android:inputType="textCapSentences|textShortMessage"/>

    <TextView
            android:id="@+id/new_workout_label_place"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_workout_label_place"
            android:layout_below="@+id/new_workout_title"
            style="@style/CMCaption"
    />
    <EditText
            android:id="@+id/new_workout_place"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/new_workout_label_place"
            android:maxLength="100"
            android:singleLine="true"
            style="@style/CMEditText"
            android:inputType="textCapWords|textPostalAddress"
            android:contentDescription="@string/new_workout_label_place"/>

    <TextView
            android:id="@+id/new_workout_label_duration"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_workout_label_duration"
            android:layout_below="@+id/new_workout_place"
            style="@style/CMCaption"
    />
    <EditText
            android:id="@+id/new_workout_duration"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/new_workout_label_duration"
            android:editable="false"
            android:focusable="false"
            style="@style/CMEditText"
            android:inputType="time"
            android:contentDescription="@string/new_workout_label_duration"/>

    <TextView
            android:id="@+id/new_workout_label_origin_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_workout_label_origin_cloud_title"
            android:layout_below="@+id/new_workout_duration"
            style="@style/CMCaptionHead"
    />
    <TextView
            android:id="@+id/new_workout_label_origin_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_workout_label_origin_cloud_desc"
            android:layout_below="@id/new_workout_label_origin_title"
            style="@style/CMCaption"
    />
    <android.support.v7.widget.SwitchCompat
            android:id="@+id/new_workout_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/new_workout_label_origin_title"
            android:layout_toEndOf="@+id/new_workout_label_origin_title"
            android:layout_alignTop="@+id/new_workout_label_origin_title"
            android:layout_alignBottom="@+id/new_workout_label_origin_desc"
    />
</RelativeLayout>
